fix double scrolling, replace second section lorem with project details

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   color: #f7f7f7;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 a {
@@ -17,6 +17,7 @@ a {
   height: 100vh;
   position: relative;
   overflow-x: hidden;
+  overflow-y: hidden;
   font-size: 1.16rem;
 }
 
